# qualis

./: .buildpacks  .coverage  .env.example  .env.production.example  .gitignore  .gitleaksignore  .importlinter  .jscpd.json  .lycheeignore  .pre-commit-config.yaml  .semgrepignore  .zenodo.json  AI_USAGE.md  AUDIO_EXPORT_VERIFICATION.md  AUDIO_RECORDER_FEASIBILITY_ASSESSMENT.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  EXPORT_VERIFICATION_SUMMARY.md  IMPORT_EXPORT_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE.md  PQMETHOD_RKIT_EXPORT_VERIFICATION.md  Procfile  RANDOM_STATEMENT_ORDER_IMPLEMENTATION_PLAN.md  README.md  RKIT_EXPORT_FIX_SUMMARY.md  SECURITY.md  SESSION_ISOLATION_VERIFICATION.md  STUDY_VISUALIZATION_OVERHAUL_PLAN.md  TODO.md  check_db.py  ci_logs.txt  docker-compose.production.yml  docker-compose.yml  ennallistaminen_config.json  export_openapi.py  index.html  (+14 more)
backend/: .dockerignore  .env.s3.example  Dockerfile  MIGRATION_README.md  README.md  README_TESTING.md  alembic.ini  export_openapi.py  init_db.py  migrate_add_participant_created_at.py  migrate_collaboration.py  openapi.json  pyproject.toml  requirements-dev.txt  requirements.txt  seed.py  seed_demo.py  seed_lipset.py  update_statements.py  update_study.py  vulture_whitelist.py
backend/alembic/versions/: 8e32439881ce_initial_schema.py  8e4ef63c6c7a_rename_randomize_statements_to_.py
backend/app/: database.py  dependencies.py  exceptions.py  limiter.py  main.py  models.py  resume_codes.py  schema_validation.py  schemas.py
backend/app/core/: config.py
backend/app/middleware/: errors.py  log_scrub.py  security.py  spa.py
backend/app/models/: __init__.py  analysis.py  base.py  concourse.py  email_token.py  memo.py  participant.py  project.py  recruitment.py  study.py  twofa_email_otp.py  user.py
backend/app/routers/: __init__.py  audio.py  auth.py  auth_endpoints.txt  config.py  logs.py  participants.py  submissions.py  test.py
backend/app/schemas/: __init__.py  analysis.py  audio.py  auth.py  common.py  concourses.py  config.py  memos.py  participants.py  projects.py  recruitment.py  studies.py  users.py
backend/app/services/: admin_user_service.py  analysis_service.py  concourse_service.py  email_change_service.py  email_otp_service.py  email_token_consume_service.py  export_service.py  memo_service.py  quotas.py  recruitment_service.py  storage_service.py  study_data_service.py  study_defaults.py  study_service.py  submission_service.py
backend/app/types/: __init__.py  wire.py
backend/app/utils/: audit.py  crypto.py  email.py  json_response.py  script_utils.py  security.py  smtp_mode.py  storage_mode.py  study_flow.py
backend/data/: example-study.concourse.json  example-study.json  example-study.sorts.json  lipset-democracy.json  lipset-democracy.sorts.json
backend/data/audio/: manifest.json
backend/db_migrations/versions/: 2bf0f513c6c8_add_audio_recordings_table.py  36fea97cbbb6_add_rough_sort_enabled_flag_to_studies.py  429b422e3b22_add_manual_rotations_to_analysis_runs.py  4a1719a5ad2f_merge_concourse_and_workspace_rename_.py  4ef41a295cbb_add_bootstrap_to_analysis_runs.py  60af83267ba5_.py  8b649314aa4a_add_data_retention_months_to_studies.py  a3f1c2e9b4d7_add_pending_email_column.py  a64b4724fcb8_add_is_test_run_to_participants.py  ac63354ffc6a_add_methodology_memo_to_studies.py  b1c2d3e4f5a6_add_concourse_tables.py  b3a47d8e9f12_drop_participants_is_test_run.py  c3d4e5f6a7b8_add_item_versions_and_comments.py  c8d9e0f1a2b3_add_statement_concourse_traceability.py  c94f0b41532e_add_analysis_runs_table.py  cb2c7f6f0cfe_rename_researcher_to_member_and_owner_.py  cb8732294475_add_auth_email_flows.py  d3221972445d_add_pre_instruction.py  db2ad904b167_add_memo_entries_and_memo_comments_.py  e1a9c3d47f82_add_draft_responses.py  f547a0b1a6d1_add_factor_notes_json_column_to_.py  f7a3b2c19d45_add_last_step_reached.py  f7c124e0ec1e_remove_email_otp_2fa_channel.py  fd88287d3f9b_fix_password_changed_at_default.py
backend/migrations/: env.py
backend/migrations/versions/: 2026_01_14_0db7965d6b26_initial_schema_baseline.py  2026_01_15_0eefc0fc1787_add_integrity_constraints.py
backend/scripts/: README.md  backup_database.py  check_relationships.py  check_seed.py  check_submissions.py  cleanup_consumed_email_tokens.py  create_bucket.py  create_user.py  dump_openapi.py  ensure_schema.py  generate_demo_audio.py  generate_demo_sorts.py  init_db.py  lint_logger_urls.py  migrate.py  migrate_001_add_ui_labels.py  migrate_add_study_updated_at.py  migrate_process_steps.py  migrate_projects_data.py  migrate_workspaces_config.py  migrate_workspaces_data.py  postdeploy.py  test_s3_connection.py  test_submission_validation.py  validate_migration.py  verify_data_layer.py  verify_statement_sync.py
backend/tests/: conftest.py  test_admin_workspaces.py  test_api.py  test_error_handling.py
backend/tests/integration/: test_admin.py  test_admin_exports.py  test_admin_rbac.py  test_admin_studies.py  test_admin_user_guards.py  test_admin_users.py  test_analysis.py  test_api_error_hygiene.py  test_api_participants.py  test_api_routing.py  test_api_study.py  test_audio.py  test_auth.py  test_auth_comprehensive.py  test_auth_edge_cases.py  test_auto_save_sync.py  test_concourse.py  test_consent_flow.py  test_data_collection.py  test_data_lifecycle.py  test_docs_static.py  test_exports.py  test_exports_comprehensive.py  test_import_cycle.py  test_import_validation.py  test_inactive_user_lockout.py  test_jwt_isolation.py  test_language_activation.py  test_lifecycle_integrity.py  test_lipset_validation.py  test_login_last_login.py  test_memo_comment.py  test_memo_entry.py  test_memo_migration.py  test_owner_immutability.py  test_participant_flow_correctness.py  test_participation.py  test_personal_data_erasure.py  test_postsort_edge_cases.py  test_progress.py  (+22 more)
backend/tests/security/: test_audit_deliverables_present.py  test_dep_cves.py
backend/tests/unit/: test_admin_user_service.py  test_admin_users.py  test_analysis_service.py  test_db_isolation.py  test_demo_seed_sessions.py  test_email_token.py  (+22 more)
(+1260 files in other folders)
