[project]
name = "libre-q-backend"
version = "0.1.0"
description = "Backend for Libre-Q"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0,<0.129.0",
    "asyncpg==0.31.0",
    "pydantic==2.12.5",
    "sqlalchemy[asyncio]==2.0.45",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.1.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.1.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.12.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "pyotp>=2.9.0",
    "alembic>=1.18.1",
    "python-multipart>=0.0.26",
    "boto3>=1.36.17",
    "python-magic>=0.4.27",
    "numpy>=2.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "radon>=6.0.0",
    "vulture>=2.11",
    "import-linter>=2.0",
    "deptry>=0.20.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.152.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py313"

[tool.deptry]
known_first_party = ["app"]

# mypy — global config is permissive (project default).
# Per-module strict overrides build up incrementally per the v0.2 quality
# roadmap (Phase 1H, Phase 3F). Strict modules are the documented
# higher-bar surface; new modules should opt in here.
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.utils.security",
    "app.utils.audit",
    "app.resume_codes",
    # Phase 3 wave 1 — Group A pure leaves (no internal app imports)
    "app.exceptions",
    "app.limiter",
    "app.utils.crypto",
    "app.utils.email",
    "app.utils.script_utils",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# pydantic-settings stubs expose Any in BaseSettings.__init__ signature;
# disallow_any_explicit would flag every Settings subclass. All other
# strict checks apply.
module = ["app.core.config"]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 1 — Group B domain leaves
# middleware.errors uses Any for generic HTTP error detail payloads;
# database uses dict[str, Any] for SQLAlchemy engine kwargs.
# disallow_any_explicit is omitted here because some Any is structurally
# required (HTTP error detail is truly untyped, engine_kwargs is a catch-all).
module = [
    "app.middleware.security",
    "app.middleware.errors",
    "app.middleware.spa",
    "app.database",
    "app.schema_validation",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 1 — Group C schemas (Pydantic models)
# disallow_any_explicit is omitted: Pydantic v2 BaseModel stubs expose Any
# in __init_subclass__ / metaclass, so every class Foo(BaseModel) would be
# flagged. Structurally-required Any fields (JSON blobs: presort_answers,
# ui_labels, engine_kwargs) are acceptable at the schema boundary.
module = [
    "app.schemas.analysis",
    "app.schemas.audio",
    "app.schemas.auth",
    "app.schemas.common",
    "app.schemas.concourses",
    "app.schemas.participants",
    "app.schemas.projects",
    "app.schemas.recruitment",
    "app.schemas.studies",
    "app.schemas.users",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 2 — Batch 2 services (full strict)
# storage_service: boto3 was previously untyped (type: ignore on imports);
# stubs now ship so the ignores were unused. 2 casts for boto3 return Any
# (generate_presigned_url → str, StreamingBody.read() → bytes).
module = [
    "app.services.storage_service",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 2 — Batch 2 services (relaxed tier)
# concourse_service: SQLAlchemy ORM-heavy; Mapped[dict] in models.py propagates
# type-arg error. 2 bare dict annotations tightened (dict → dict[str, object]).
# disallow_any_explicit omitted due to ORM stub propagation.
module = [
    "app.services.concourse_service",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 2 — Batch 1 services (relaxed tier)
# analysis_service: pure Python + NumPy; 3 casts added for numpy 2.x stub
# gaps (arithmetic/bitwise ops return Any). Uses dict[str, Any] for JSON wire
# data (study dump, grid_config, participant records) — structurally required.
# study_defaults: pure i18n constants; uses dict[str, Any] for translation
# content blobs (step_help nested structure) — structurally required.
# recruitment_service: touches SQLAlchemy models; Mapped[dict] in models.py
# lacks type params. One no-untyped-def fixed (record_start -> None).
# disallow_any_explicit is omitted for all three: Any is load-bearing at the
# JSON/ORM boundary.
module = [
    "app.services.analysis_service",
    "app.services.study_defaults",
    "app.services.recruitment_service",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg", "aiofiles", "gunicorn", "uvicorn", "python-multipart", "alembic"]
DEP003 = ["botocore"]  # Transitive dependency of boto3

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Three tier architecture"
type = "layers"
layers = [
    "app.routers",
    "app.services",
    "app.models"
]
