[project]
name = "qualis-backend"
version = "0.6.0"
description = "Backend for Qualis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.0,<0.137.0",
    "asyncpg==0.31.0",
    "pydantic==2.13.3",
    "sqlalchemy[asyncio]==2.0.45",
    "pydantic-settings>=2.6.0",
    "aiofiles>=24.1.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.1.0",
    "gunicorn>=23.0.0",
    "pyjwt>=2.12.0",
    "httpx>=0.27.0",
    "starlette>=0.40.0",
    "pyotp>=2.9.0",
    "alembic>=1.18.1",
    "python-multipart>=0.0.26",
    "boto3>=1.36.17",
    "python-magic>=0.4.27",
    "numpy>=2.2.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "typing-extensions>=4.12.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
    "bandit>=1.7.0",
    "pip-audit>=2.7.0",
    "radon>=6.0.0",
    "vulture>=2.11",
    "import-linter>=2.0",
    "deptry>=0.20.0",
    "pre-commit>=4.0.0",
    "hypothesis>=6.152.2",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
target-version = "py313"

[tool.deptry]
known_first_party = ["app"]

# mypy — global config is permissive (project default).
# Per-module strict overrides build up incrementally per the v0.2 quality
# roadmap (Phase 1H, Phase 3F). Strict modules are the documented
# higher-bar surface; new modules should opt in here.
[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.utils.security",
    "app.utils.audit",
    "app.resume_codes",
    # Phase 3 wave 1 — Group A pure leaves (no internal app imports)
    "app.exceptions",
    "app.limiter",
    "app.utils.crypto",
    "app.utils.email",
    "app.utils.script_utils",
    # Optional rough_sort phase 1 — pure state-machine helper
    "app.utils.study_flow",
    # auth email flows (v0.6.0)
    "app.services.email_token_consume_service",
    "app.services.email_otp_service",
    "app.middleware.log_scrub",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 3b — models keystone (relaxed tier)
# step_help bare Mapped[dict] tightened to Mapped[dict[str, dict[str, str]]].
# disallow_any_explicit omitted: remaining dict[str, Any] columns are load-bearing
# JSON blobs (presort_config, postsort_config, presort_answers, postsort_answers,
# draft_responses, analysis result) — the JSON/ORM boundary is genuinely untyped.
module = ["app.models"]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# pydantic-settings stubs expose Any in BaseSettings.__init__ signature;
# disallow_any_explicit would flag every Settings subclass. All other
# strict checks apply.
module = ["app.core.config"]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 1 — Group B domain leaves
# middleware.errors uses Any for generic HTTP error detail payloads;
# database uses dict[str, Any] for SQLAlchemy engine kwargs.
# disallow_any_explicit is omitted here because some Any is structurally
# required (HTTP error detail is truly untyped, engine_kwargs is a catch-all).
module = [
    "app.middleware.security",
    "app.middleware.errors",
    "app.middleware.spa",
    "app.database",
    "app.schema_validation",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 1 — Group C schemas (Pydantic models)
# disallow_any_explicit is omitted: Pydantic v2 BaseModel stubs expose Any
# in __init_subclass__ / metaclass, so every class Foo(BaseModel) would be
# flagged. Structurally-required Any fields (JSON blobs: presort_answers,
# ui_labels, engine_kwargs) are acceptable at the schema boundary.
module = [
    "app.schemas.analysis",
    "app.schemas.audio",
    "app.schemas.auth",
    "app.schemas.common",
    "app.schemas.concourses",
    "app.schemas.participants",
    "app.schemas.projects",
    "app.schemas.recruitment",
    "app.schemas.studies",
    "app.schemas.users",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 2 — Batch 2 services (full strict)
# storage_service: boto3 was previously untyped (type: ignore on imports);
# stubs now ship so the ignores were unused. 2 casts for boto3 return Any
# (generate_presigned_url → str, StreamingBody.read() → bytes).
module = [
    "app.services.storage_service",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 3b — cascade promotion (full strict)
# concourse_service: ORM-heavy; ORM stub propagation resolved by models.py fix.
# recruitment_service: ORM stub propagation resolved by models.py fix.
# Both are now clean under disallow_any_explicit.
module = [
    "app.services.concourse_service",
    "app.services.recruitment_service",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 3b — full strict graduation (wave 3b post-mortem)
# TypedDicts introduced in app/types/wire.py (Cluster 2-4) and inline in
# analysis_service (Cluster 1) replaced the dict[str, Any] barriers that
# previously blocked full strict.
# Residual Any rationale per service:
#   analysis_service: _distribution_from_grid_config receives ORM JSON column
#     (list[dict[str,object]]) — cast via int() with type: ignore[arg-type].
#     build_sort_matrix updated in wave 4 to accept SortDataDump | StudyDump
#     (typed union) and return list[SortParticipantRecord], list[StatementDumpRecord].
#   study_defaults: (no Any remaining — all eliminated by TranslationDefaults)
#   study_data_service: presort/postsort answers are dict[str,object] (open
#     survey responses) — kept as object, not Any.
#   export_service: presort_config / postsort_config blobs are study-author-
#     defined question schemas; get_label / get_value_label accept dict[str,Any]
#     because the config schema is open-ended (wave 4 territory).
module = [
    "app.services.analysis_service",
    "app.services.study_defaults",
    "app.services.study_data_service",
    "app.services.export_service",
    "app.types.wire",
    "app.types",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 4 — batch 2 routers (full strict)
# analysis: _get_analysis_dump now returns SortDataDump (calls StudyDataService directly,
#   bypassing the untyped StudyService proxy); _get_statement_text typed to StatementDumpRecord;
#   _build_z_scores_list / _build_factor_arrays_list typed to NDArray[np.float64/int64].
#   build_sort_matrix cleanup: accepts SortDataDump | StudyDump, returns
#   list[SortParticipantRecord] and list[StatementDumpRecord] — removing the last
#   dict[str,Any] barrier in the analysis pipeline (wave 3b deferred item).
#   typing.Any import removed entirely from the router.
module = [
    "app.routers.admin.analysis",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 4 — batch 1 routers (full strict)
# audio: 3 missing return types added (AudioUploadResponse, dict[str, str], AudioRecordingRead).
# recruitment: List[T] → list[T], 3 return types added; ORM → schema cast via response_model.
# admin/users: cast(PaginatedResponse[UserRead], ...) aligns mypy with FastAPI serialisation.
# shared fix: security.py redundant cast()s removed (bcrypt/jwt stubs now typed);
#             dependencies.py Callable → Callable[..., Coroutine[Any, Any, T]], redundant cast removed.
module = [
    "app.routers.audio",
    "app.routers.admin.recruitment",
    "app.routers.admin.users",
]
disallow_untyped_defs = true
disallow_any_explicit = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Phase 3 wave 4 — batch 1 routers (relaxed tier) + dependencies
# disallow_any_explicit omitted: Pydantic v2 BaseModel stubs expose Any in __init_subclass__;
# routers with inline BaseModel definitions (logs, lifecycle, invitations, test) all trigger this.
# dependencies.py: Coroutine[Any, Any, T] is the canonical type for async factory deps —
#   the first two Any args (yield / send types) are always Any for standard coroutines.
# logs.py: LogEntry.context is dict[str, Any] — frontend error payloads are genuinely open-ended.
# lifecycle.py: 6 Pydantic model classes (DataInventory etc.); no router-level Any.
# invitations.py: InvitationAccept Pydantic model; get_db import corrected (app.database).
# test.py: 4 Pydantic model classes (TestSeedData etc.); router return types added.
module = [
    "app.dependencies",
    "app.routers.logs",
    "app.routers.admin.lifecycle",
    "app.routers.admin.invitations",
    "app.routers.test",
    # Phase 3 wave 4 — batch 3 routers
    # studies_participants: 6 missing return types added; cast(PaginatedResponse[ParticipantRead], ...)
    #   pattern from admin/users.py wave 4 batch 1.
    "app.routers.admin.studies_participants",
    # participants: 5 return types added (ConsentResponse, ResumeResponse, dict[str,str] x2, None).
    #   Calls into untyped StudyService.record_consent proxy stay clean under the relaxed tier
    #   (disallow_untyped_calls is not enabled here).
    "app.routers.participants",
    # submissions: 3 return types (dict[str,Any] x2 for service-derived payloads, dict[str,str]).
    #   typing.Any is structurally required: get_study returns whatever
    #   StudyService.get_resolved_study_config produces (open-ended study config dict).
    "app.routers.submissions",
    # auth: 8 return types (User x3 via response_model, Token, TOTPSetup, dict[str,str] x3).
    #   No casts needed — all calls into utils/security and utils/audit are already strict-typed.
    "app.routers.auth",
    # admin/studies: 4 return types (PaginatedResponse[StudyRead] via cast, None x2, list[StaleStatementEntry]).
    #   StaleStatementEntry TypedDict imported from concourse_service (Phase 3 wave 3b strict);
    #   FastAPI serialises to StaleStatementRead via response_model.
    "app.routers.admin.studies",
    # admin/concourses: 15 return types (Concourse, ConcourseItem, ConcourseItemComment,
    #   ConcourseItemVersion, ConcourseTag x2, list[ORM] x4, None x3, PaginatedResponse[ConcourseRead]).
    #   FastAPI serialises ORM models to their Pydantic Read counterparts via response_model.
    "app.routers.admin.concourses",
    # admin/exports: 8 return types (StreamingResponse x6 for CSV/ZIP/audio downloads,
    #   dict[str, Any] x2 for service-derived dump payloads).
    #   typing.Any is structurally required: get_study_full_dump is an untyped proxy
    #   over StudyDataService.get_study_full_dump (returns open-ended StudyDump).
    "app.routers.admin.exports",
    # admin/projects: 5 return types (PaginatedResponse[ProjectWithRole|ProjectMemberRead]
    #   via cast, None x2 for delete endpoints, InvitationLink for invite creation).
    "app.routers.admin.projects",
    # admin/studies_import_export: 7 return types + 2 inner helper functions typed.
    #   dict[str, Any] x4 for service-derived stats / open-ended export config;
    #   ValidationResult / StudyImportResponse for the validation + import endpoints.
    #   inner add_error/add_warning use **kwargs: Any (mixed wire types).
    "app.routers.admin.studies_import_export",
    # submission_service: 3 return types added to record_consent / validate_distribution /
    #   process_submission. dict[str, Any] kept for the submission/consent payloads
    #   (open-ended response shapes consumed at JSON boundary).
    "app.services.submission_service",
    # study_service: 2 inner helpers (add_error, check_questions) typed; 8 backward-compat
    #   proxy methods typed as *args/**kwargs: Any -> Any. The proxies dispatch to the
    #   already-strict SubmissionService / StudyDataService — narrowing their signatures
    #   would require duplicating each proxy with the underlying method's signature
    #   (out of scope; the proxies exist for backward compat with old call sites).
    "app.services.study_service",
]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Memo subsystem — service is a leaf with no JSON columns or stub leakage.
module = ["app.services.memo_service"]
disallow_any_explicit = true
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Memo router — Pydantic models in router (BaseModel stubs leak Any).
module = ["app.routers.admin.memos"]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
# Memo schemas — Pydantic v2 BaseModel stubs.
module = ["app.schemas.memos"]
disallow_untyped_defs = true
warn_return_any = true
strict_equality = true

[tool.deptry.per_rule_ignores]
DEP002 = ["asyncpg", "aiofiles", "gunicorn", "uvicorn", "python-multipart", "alembic"]
DEP003 = ["botocore"]  # Transitive dependency of boto3

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Three tier architecture"
type = "layers"
layers = [
    "app.routers",
    "app.services",
    "app.models"
]
